Fixed alignment of cube

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -75,16 +75,17 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .container,
-   .about-page{
+  .container{
     height: 100%;
     min-height: 100%;
    }
   .stage-cube-cont {
-    position: initial;
+    position: relative;
     width: 100%;
     height: 100%;
     display: block;
     box-sizing: border-box;
+    left: 0;
+    top: -3%;
   }
 }
